# winauth-rs

./: .azure-pipelines.yml
winauth/: Cargo.toml
winauth/src/: lib.rs
