[package]
name = "winauth"
description = "Windows Authentication in Rust (NTLMv2)"
repository = "https://github.com/steffengy/winauth-rs"
documentation = "https://docs.rs/winauth/"
version = "0.0.5"
authors = ["Steffen Butzer <steffen.butzer@outlook.com>"]
license = "MIT/Apache-2.0"
keywords = ["ntlm", "sspi", "winauth"]
edition = "2018"

[dependencies]
bitflags = "1.3"
byteorder = "1.4"
rand = "0.8"
md5 = "0.7"
base64 = { version = "0.13" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winerror", "sspi"] }

[dev-dependencies]
hyper = "0.14"
hyper-tls = "0.5"
reqwest= "0.11"
cfg-if = "0.1"
